Initial front-end implementation of submarine, needs out of bounds check fixing

--- a/src/main/java/assets/css/custom.css
+++ b/src/main/java/assets/css/custom.css
@@ -235,3 +235,11 @@ td:hover {
 #mine2{
     background-color: green;
 }
+
+#sub {
+    border: 1px solid black;
+}
+
+#sub2{
+    background-color: green;
+}
